<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:id="@+id/bmi_Classification">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/layout_underWeight"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@drawable/layout_background" >

        <LinearLayout
            android:paddingLeft="5dp"
            android:id="@+id/layout_underWeight_display"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Underweight"
                android:id="@+id/textView_underweight" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_underweight_value"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_underweight_value" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_normal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@drawable/layout_background"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:paddingLeft="5dp"
            android:id="@+id/layout_normal_display"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Normal"
                android:id="@+id/textView_normal"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_normal_value"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_normal_value"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_overweight"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@drawable/layout_background"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:paddingLeft="5dp"
            android:id="@+id/layout_overweight_display"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Overweight"
                android:id="@+id/textView_overweight"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_overweight_value"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_overweight_value"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_obese"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@drawable/layout_background"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:paddingLeft="5dp"
            android:id="@+id/layout_obese_display"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Obese"
                android:id="@+id/textView_obese"
               />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_obese_value"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_obese_value"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
